[gd_scene load_steps=7 format=3 uid="uid://di8x4p5as3hj2"]

[ext_resource type="Theme" uid="uid://bo07iel4au107" path="res://resources/ui_theme.tres" id="1_smpvr"]
[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="2_g4yvg"]
[ext_resource type="Texture2D" uid="uid://b5xb634rjoavc" path="res://assets/art/ui/Cryo's Mini GUI/GUI/GUI_4x.png" id="3_88y3m"]
[ext_resource type="StyleBox" uid="uid://d1fj2wwm4gp0y" path="res://resources/styleboxes/brown_outline_style_box_texture.tres" id="4_cej64"]
[ext_resource type="PackedScene" uid="uid://cbvhsbn1jokdt" path="res://scenes/ui/sound_menu.tscn" id="5_tsucj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m7mj5"]
atlas = ExtResource("3_88y3m")
region = Rect2(384, 0, 96, 96)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -122.5
offset_right = 191.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_smpvr")
script = ExtResource("2_g4yvg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_m7mj5")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("4_cej64")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="StageSelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stage Select"

[node name="SoundMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Settings"

[node name="SoundMenu" parent="." instance=ExtResource("5_tsucj")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StageSelectButton" to="." method="_on_stage_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SoundMenuButton" to="." method="_on_sound_menu_button_pressed"]
